modules/Istio_GKE/network.tf
#**
# * Copyright 2023 Google LLC
# *
# * Licensed under the Apache License, Version 2.0 (the "License");
# * you may not use this file except in compliance with the License.
# * You may obtain a copy of the License at
# *
# *      http://www.apache.org/licenses/LICENSE-2.0
# *
# * Unless required by applicable law or agreed to in writing, software
# * distributed under the License is distributed on an "AS IS" BASIS,
# * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# * See the License for the specific language governing permissions and
# * limitations under the License.
# */

#########################################################################
# Data sources — look up existing network/subnet when create_network = false
#########################################################################

data "google_compute_network" "existing_vpc" {
  count   = var.create_network ? 0 : 1
  project = local.project.project_id
  name    = var.network_name
}

data "google_compute_subnetwork" "existing_subnet" {
  count   = var.create_network ? 0 : 1
  project = local.project.project_id
  name    = var.subnet_name
  region  = var.region
}

#########################################################################
# Locals — unified references regardless of create_network
#########################################################################

locals {
  network = var.create_network ? google_compute_network.vpc[0] : data.google_compute_network.existing_vpc[0]
  subnet  = var.create_network ? google_compute_subnetwork.subnetwork[0] : data.google_compute_subnetwork.existing_subnet[0]
}

#########################################################################
# VPC Network & Subnet (only when create_network = true)
#########################################################################

resource "google_compute_network" "vpc" {
  count                   = var.create_network ? 1 : 0
  project                 = local.project.project_id
  name                    = "${var.network_name}-${local.random_id}"
  auto_create_subnetworks = false
  routing_mode            = "GLOBAL"
  depends_on              = [google_project_service.enabled_services]
}

resource "google_compute_subnetwork" "subnetwork" {
  count                    = var.create_network ? 1 : 0
  project                  = local.project.project_id
  name                     = var.subnet_name
  ip_cidr_range            = tolist(var.ip_cidr_ranges)[0]
  region                   = var.region
  network                  = google_compute_network.vpc[0].name
  private_ip_google_access = true

  secondary_ip_range {
    range_name    = var.pod_ip_range
    ip_cidr_range = var.pod_cidr_block
  }

  secondary_ip_range {
    range_name    = var.service_ip_range
    ip_cidr_range = var.service_cidr_block
  }

  depends_on = [google_compute_network.vpc]
}

#########################################################################
# Firewall Rules (only when create_network = true)
#########################################################################

resource "google_compute_firewall" "fw_allow_lb_hc" {
  count   = var.create_network ? 1 : 0
  project = local.project.project_id
  name    = "fw-allow-lb-hc-${local.random_id}"
  network = google_compute_network.vpc[0].name

  allow {
    protocol = "tcp"
    ports    = ["80"]
  }

  source_ranges = ["35.191.0.0/16", "130.211.0.0/22"]
  depends_on    = [google_compute_network.vpc]
}

resource "google_compute_firewall" "fw_allow_nfs_hc" {
  count   = var.create_network ? 1 : 0
  project = local.project.project_id
  name    = "fw-allow-nfs-hc-${local.random_id}"
  network = google_compute_network.vpc[0].name

  allow {
    protocol = "tcp"
    ports    = ["2049"]
  }

  source_ranges = ["35.191.0.0/16", "130.211.0.0/22"]
  depends_on    = [google_compute_network.vpc]
}

resource "google_compute_firewall" "fw_allow_iap_ssh" {
  count   = var.create_network ? 1 : 0
  project = local.project.project_id
  name    = "fw-allow-iap-ssh-${local.random_id}"
  network = google_compute_network.vpc[0].name

  allow {
    protocol = "tcp"
    ports    = ["22"]
  }

  source_ranges = ["35.235.240.0/20"]
  depends_on    = [google_compute_network.vpc]
}

resource "google_compute_firewall" "fw_allow_intra_vpc" {
  count   = var.create_network ? 1 : 0
  project = local.project.project_id
  name    = "fw-allow-intra-vpc-${local.random_id}"
  network = google_compute_network.vpc[0].name

  allow {
    protocol = "all"
  }

  source_ranges = var.ip_cidr_ranges
  depends_on    = [google_compute_network.vpc]
}

resource "google_compute_firewall" "fw_allow_gce_nfs_tcp" {
  count   = var.create_network ? 1 : 0
  project = local.project.project_id
  name    = "fw-allow-nfs-tcp-${local.random_id}"
  network = google_compute_network.vpc[0].name

  allow {
    protocol = "tcp"
    ports    = ["2049"]
  }

  source_ranges = var.ip_cidr_ranges
  target_tags   = ["nfs-server"]
  depends_on    = [google_compute_network.vpc]
}

resource "google_compute_firewall" "fw_allow_http_tcp" {
  count   = var.create_network ? 1 : 0
  project = local.project.project_id
  name    = "fw-allow-http-tcp-${local.random_id}"
  network = google_compute_network.vpc[0].name

  allow {
    protocol = "tcp"
    ports    = ["80", "443"]
  }

  source_ranges = var.ip_cidr_ranges
  target_tags   = ["http-server"]
  depends_on    = [google_compute_network.vpc]
}

#########################################################################
# Cloud Router & NAT (only when create_network = true)
#########################################################################

resource "google_compute_router" "cr_region" {
  count   = var.create_network ? 1 : 0
  project = local.project.project_id
  name    = "cr1-${var.region}"
  region  = google_compute_subnetwork.subnetwork[0].region
  network = google_compute_network.vpc[0].id

  bgp {
    asn = 64514
  }

  depends_on = [google_compute_network.vpc]
}

resource "google_compute_router_nat" "nat_gw_region" {
  count                              = var.create_network ? 1 : 0
  project                            = local.project.project_id
  name                               = "nat-gw1-${var.region}"
  router                             = google_compute_router.cr_region[0].name
  region                             = google_compute_router.cr_region[0].region
  nat_ip_allocate_option             = "AUTO_ONLY"
  source_subnetwork_ip_ranges_to_nat = "ALL_SUBNETWORKS_ALL_IP_RANGES"

  log_config {
    enable = true
    filter = "ERRORS_ONLY"
  }

  depends_on = [google_compute_network.vpc]
}
